# pin-array-manipulator-object-control

./: .gitignore  environment.py  pyproject.toml  requrements.txt  test.py  train.py
control/: control_policy.py  simple_translation.py  wave.py
manipulator/: pin_array_manipulator.py
objects/: object.py
src/: basic_targeting_rl.py  initial_exploration.py  rl_common.py  test.py  test_basic_targeting_rl_result.py  test_composite_control.py  test_contact_seeking.py  test_intermediate_target_policy.py  test_residual_target_policy.py  test_sine_wave.py  test_trained_pose_rl.py  train_intermediate_target_policy.py  train_residual_target_policy.py  train_rl_pose.py
src/DOF-2/: test_2dof.py  train_2dof.py
src/DOF-6/: test_6dof.py  test_6dof_staged.py  train_6dof.py  train_6dof_staged.py
src/curriculum_training/: constants.py  test.py  train.py
src/pin_array_manipulator_object_control/control/: ball_cup.py  composite_control.py  contact_seeking.py  control_policy.py  intermediate_target_policy_network.py  pose_shift_control.py  residual_target_policy_network.py  simple_translation.py  sine_wave.py
src/pin_array_manipulator_object_control/environment/: __init__.py  composite_control_env.py  observation.py  pin_array_env.py  rewards.py  target_generator.py
src/pin_array_manipulator_object_control/manipulator/: __init__.py  manipulator.py  observation.py  pin_array_manipulator.py
src/pin_array_manipulator_object_control/objects/: __init__.py  ball.py  cross_3d.py  cylinder.py  hollow_box.py  object.py  slab.py
(+11 files in other folders)
